# buffett-screener

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
config/: filter_config.yaml
data_acquisition/: __init__.py  __main__.py  api_config.py  data_quality.py  financials.py  macro_data.py  market_data.py  schema.py  store.py  universe.py
docs/: ARCHITECTURE.md  DATA_SOURCES.md  FORMULAS.md  REPORT_SPEC.md  SCORING.md
metrics_engine/: __init__.py  __main__.py  capex.py  composite_score.py  growth.py  leverage.py  owner_earnings.py  profitability.py  returns.py  valuation.py
output/: __init__.py  markdown_export.py  pipeline_runner.py  streamlit_app.py  summary_table.py
screener/: __init__.py  composite_ranker.py  exclusions.py  filter_config_loader.py  hard_filters.py  soft_filters.py
tests/: __init__.py  test_api_config.py  test_data_quality.py  test_filters.py  test_financials.py  test_formulas.py  test_integration.py  test_integration_full.py  test_integration_module1.py  test_integration_module2.py  test_integration_module3.py  test_market_data.py  test_metrics_engine.py  test_output_pipeline.py  test_qualitative_prompts.py  test_recommendation.py  test_report_generator.py  test_schema.py  test_store.py  test_templates.py  test_universe.py  test_valuation_reports.py
valuation_reports/: __init__.py  earnings_yield.py  intrinsic_value.py  margin_of_safety.py  qualitative_prompts.py  recommendation.py  report_generator.py
valuation_reports/templates/: deep_dive_template.md  summary_table_template.md
