[tool.poetry]
name = "buffett-screener"
version = "0.1.0"
description = "A Warren Buffett-style fundamental stock screener and intrinsic value engine"
authors = []
readme = "README.md"
packages = [
    { include = "data_acquisition" },
    { include = "metrics_engine" },
    { include = "screener" },
    { include = "valuation_reports" },
    { include = "output" },
]

[tool.poetry.dependencies]
python = "^3.11"
pandas = "^2.2"
numpy = "^1.26"
duckdb = "^0.10"
requests = "^2.31"
pyyaml = "^6.0"
yfinance = "^0.2"
matplotlib = "^3.8"
streamlit = "^1.32"
jinja2 = "^3.1"
python-dotenv = "^1.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0"
pytest-cov = "^5.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]

[tool.coverage.run]
source = ["data_acquisition", "metrics_engine", "screener", "valuation_reports", "output"]
omit = ["tests/*"]
