[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "buffett-screener"
version = "0.1.0"
description = "A Warren Buffett-style fundamental stock screener and intrinsic value engine"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pandas>=2.0",
    "numpy>=1.24",
    "duckdb>=0.9",
    "requests>=2.31",
    "pyyaml>=6.0",
    "yfinance>=0.2.31",
    "matplotlib>=3.7",
    "streamlit>=1.28",
    "jinja2>=3.1",
    "pytest>=7.4",
    "python-dotenv>=1.0",
    "pyarrow>=14.0",
]

[project.optional-dependencies]
dev = [
    "ruff",
    "mypy",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["data_acquisition*", "metrics_engine*", "screener*", "valuation_reports*", "output*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.11"
strict = false
ignore_missing_imports = true
